--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,6 +12,9 @@
     "url": "git+https://github.com/jayrajroshan/bowl_app.git"
   },
   "author": "Jayraj Roshan",
+  "engines": {
+    "node": "12.x"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jayrajroshan/bowl_app/issues"
