--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
   },
   "homepage": "https://github.com/jayrajroshan/bowl_app#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "json-2-csv": "^3.7.6",
+    "node-datetime": "^2.1.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "socket.io": "^2.3.0",
