--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "path": "^0.12.7",
     "pg": "^8.3.0",
     "socket.io": "^2.3.0",
+    "unix-timestamp": "^0.2.0",
     "ws": "^7.3.1"
   }
 }
