--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "html-pdf": "^2.2.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "html2pdf.js": "^0.9.2",
     "json-2-csv": "^3.7.6",
+    "jspdf": "^2.1.1",
     "node-datetime": "^2.1.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
